--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   margin: 3rem auto;
   padding: 0 2rem;
 
-  background-color: #F7F8FD;
+  background-color: #fdf7f7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
